kubernetes/networking/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: otp-gen-vs
  namespace: usermgt
spec:
  hosts:
    - "*"
  gateways:
    - default/garihub-gateway
  http:
    - name: garihub-otp-gen
      match:
        - uri:
            prefix: /api/otp-service/v1/
      route:
        - destination:
            host: user-svc
            port:
              number: 9000
